# researchrobot

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
docker/researchrobot/: Dockerfile  Makefile  _ds_config.yaml  docker-compose.yaml  requirements.txt
docker/wellknown/: Dockerfile.wellknown  ai-plugin.json  docker-compose.yaml
docs/: conf.py  index.md
src/researchrobot/: __init__.py  _version.py  cache.py  config.py  download.py  embeddings.py  exceptions.py  generate.py  geography.py  objectstore.py  skeleton.py  specifications.py  topics.py
src/researchrobot/cmech/: __init__.py  assistant.py  cache.py  classify.py  classifysoc.py  experiences.py  extract.py  predict.py  ragsearch.py  soc.py  system_prompt.txt  util.py
src/researchrobot/cmech/test/: test_experiences.py  tools.json
src/researchrobot/datadecomp/: generate.py
src/researchrobot/nlp/: parse_tree.py
src/researchrobot/openai/: __init__.py  census_clean_paths.py  census_demo_conditions.py  census_write_questions.py  completions.py  decomposer.py  finetune.py  patterns.yaml  scratch.py
src/researchrobot/openai_tools/: __init__.py  completions.py
src/researchrobot/support/: categories.yaml
tests/: conftest.py  test_cache.py  test_object_store.py  test_skeleton.py
tests/cache/: test-bucket.db  testing.do.civicknowledge.com.db  unit-test.db
tests/data/: .gitignore  robotcache.yaml
tests/notebooks/: Scratch.ipynb
tests/testcache/: test.db
(+10 files in other folders)
