[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "guess-next-dev"
#write_to = "src/researchrobot/_version.py"

[project]
name = "researchrobot"
version = "0.0.9"

description = "Research Robot AI Dataset query system"
readme = "README.md"


authors = [
  {name = "Eric Busboom", email = "eric@civicknowledge.com"}
]
license = {text = "Proprietary"}
dependencies = [
    "more_itertools",
    "openai",
    "slugify"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
#Homepage = "https://example.com"
#Documentation = "https://readthedocs.org"
Repository = "https://github.com/CivicKnowledge/researchrobot"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
